Core Plus 2.2.3

	* Added more files into the compiled bootstrap
	* Added an included files section in the debug info
	* Fixed Bug #146: URL conflicts
	* Fixed Bug #156: Installer does not complete in non-development mode

Core Plus 2.2.2

	* Fixed the installer, it now handles enabling packages correctly.
	* Fixed some other little bugs.
	-- Charlie Powell <charlie@eval.bz>  8 Oct 2012

Core Plus 2.2.1

	* Fixed the SSL implementation
	* Added javascript library for base64 operations
	* Styling tweaks
	* Fixed the file upload input if only one option is present
	* Switched the changelog to the new standard format
	* Added a new utility, create_component.  This will create the skeleton structure of a new component.
	* Added html5shiv, the successor to the html5ie project.
	* Added element IDs as a class name of the containing wrapper, allows for easier styling.
	* Fixes in the {img} tag for when the src is set but not available.
	* Added a User object in the javascript api to make some basic user information visible in javascript applications.
	* Updated the email system a little, it now sets the "Sender" and "X-Content-Encoded-By" headers.
	* Fix in the form system, added the autocomplete argument to parse correctly and a new getID method.
	* Fix in the model system to add support for models that are extended by other classes.
	* Set the debug info to be hidden in print views.
	-- Charlie Powell <charlie@eval.bz>  3 Oct 2012

Core Plus 2.2.0

	-- Charlie Powell <charlie@eval.bz>  20 Sep 2012

Core Plus 0.1.0
	* Implementing better support for Debian-style version strings.
	* new {css} smarty block.
	* CurrentPage now supports inline styles to be added to the head.
	* Other minor fixes.
	-- Charlie Powell <charlie@eval.bz>

Core Plus 0.0.9

	* In the process of switching to AGPL.
	* Moved the theme systems into its own component.
	-- Charlie Powell <charlie@eval.bz>  Sat, 19 Nov 2011 03:12:23 +0000

Core Plus 0.0.8
